--- a/README.org
+++ b/README.org
@@ -4,9 +4,9 @@
 #+EMAIL: h5lianfu@gmail.com
 #+OPTIONS: github address: https://github.com/w-lianfu/edocs
 
-## 编辑模式(Edit mode)
+** 编辑模式(Edit mode)
 
-* 主模式(major mode)
+*** 主模式(major mode)
 
 | 模式                                 | 功能                 |
 |--------------------------------------+----------------------|
@@ -21,11 +21,11 @@
 | 大纲模式(outline mode)               | 书写大纲             |
 | 缩进文本模式(indented text mode)     | 自动缩进模式         |
 | 图形模式(picture mode)               | 绘制图形             |
-| Emacs LISP 模式(Emacs LISP mode)     | --                   |
-| LISP 模式(LISP mode)                 | --                   |
-| LISP 互动模式(LISP interaction mode) | --                   |
+| Emacs LISP 模式(Emacs LISP mode)     | ---                  |
+| LISP 模式(LISP mode)                 | ---                  |
+| LISP 互动模式(LISP interaction mode) | ---                  |
 
-* 副模式(minor mode)
+*** 副模式(minor mode)
 | 模式                         | 功能                        |
 | 自动换行模式(auto-fill mode) | 打开文字自动换行模式        |
 | 改写模式(overwrite mode)     | 输入时替换字符              |
@@ -33,6 +33,36 @@
 | 行号模式(line number mode)   | 在状态行上显示文本行号      |
 | 缩略词模式(abbrev mode)      | 允许使用单词的简写形式      |
 | VC 模式(VC mode)             | 在 Emacs 下使用版本控制系统 |
+
+** 与文件操作有关的命令
+
+| 键盘操作 | 命令名称                     | 解释说明       | 实现                                        |          |
+|----------+------------------------------+----------------+---------------------------------------------+----------|
+| C-x C-f  | find-file                    | open file      | 查找文件并在一个新缓冲区打开                |          |
+| C-x C-v  | find-alternate-file          | ---            | 读入另一个文件替换掉用 "C-x C-f" 读入的文件 |          |
+| C-x i    | insert-file                  | insert file    | 把文件插入到光标所在位置                    |          |
+| C-x C-s  | save-buffer                  | save-buffer    | save buffer                                 | 保存文件 |
+| C-x C-w  | write-file                   | save buffer as | 把缓冲区内容写入一个文件                    |          |
+| C-x C-c  | save-buffers-kill-emacs      | exit emacs     | 退出 Emacs                                  |          |
+| C-h      | help-command                 | help           | 进入 Emacs 的在线帮助系统                   |          |
+| C-h f    | describe-function            | 描述 "命令"    | 描述 "指定命令" 的在线帮助信息              |          |
+| C-h k    | describe-key                 | 描述 "键"      | 描述 "指定键" 的在线帮助信息                |          |
+| C-h t    | help-with-tutorial           | emacs tutorial | 启动 Emacs 教程                             |          |
+| C-h i    | info-goto-emacs-command-node | browse manual  | 启动 Info 文档阅读器                        |          |
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
