add GNU Emacs Reference Card

--- a/README.org
+++ b/README.org
@@ -35,7 +35,9 @@
 | 缩略词模式(abbrev mode)      | 允许使用单词的简写形式      |
 | VC 模式(VC mode)             | 在 Emacs 下使用版本控制系统 |
 
-** 与文件操作有关的命令
+** 文件编辑(Edit file)
+
+*** 与文件操作有关的命令
 
 | 键盘操作 | 命令名称                     | 解释说明       | 实现                                        |
 |----------+------------------------------+----------------+---------------------------------------------|
@@ -51,7 +53,7 @@
 | C-h t    | help-with-tutorial           | emacs tutorial | 启动 Emacs 教程                             |
 | C-h i    | info-goto-emacs-command-node | browse manual  | 启动 Info 文档阅读器                        |
 
-** 光标移动命令
+*** 光标移动命令
 
 | 键盘操作 | 命令名称            | 动作                                           |
 |----------+---------------------+------------------------------------------------|
@@ -79,7 +81,7 @@
 | M [n]    | digit-argument      | 重复执行 [n] 次后续命令                        |
 | C-u [n]  | universal-argument  | 重复执行 [n] 次后续命令(省略 [n] 时 重复 4 次) |
 
-** 文本删除命令
+*** 文本删除命令
 
 | 键盘操作 | 命令名称                | 动作                   |
 |----------+-------------------------+------------------------|
@@ -95,7 +97,7 @@
 | 无       | kill-paragraph          | 删除光标右侧的段落     |
 | 无       | backward-kill-paragraph | 删除光标左侧的段落     |
 
-** 文本块操作命令
+*** 文本块操作命令
 
 | 键盘操作       | 命令名称                | 动作                                  |
 |----------------+-------------------------+---------------------------------------|
@@ -109,7 +111,7 @@
 | C-x h          | mark-whole-buffer       | 标记整个缓冲区                        |
 | M-y            | yank-pop                | 在用过 "C-y" 命令后粘贴更早删除的文本 |
 
-** 位置交换命令
+*** 位置交换命令
 
 | 键盘操作 | 命令名称             | 动作                 |
 |----------+----------------------+----------------------|
@@ -119,7 +121,7 @@
 | 无       | transpose-sentences  | 交换两个句子的位置   |
 | 无       | transpose-paragraphs | 交换两个段落的位置   |
 
-** 字母大小写编辑命令
+*** 字母大小写编辑命令
 
 | 键盘操作 | 命令名称                          | 动作                           |
 |----------+-----------------------------------+--------------------------------|
@@ -130,7 +132,7 @@
 | M - M-u  | negtive-argument; upcase-word     | 把前一个单词的字符全部改为大写 |
 | M - M-l  | negtive-argument; downcase-word   | 把前一个单词的字符全部改为小写 |
 
-** 命令的中止和撤销
+*** 命令的中止和撤销
 
 | 键盘操作   | 命令名称        | 动作                           |
 |------------+-----------------+--------------------------------|
@@ -139,5 +141,11 @@
 | C-_ 或 C-/ | undo            | 撤销上一次编辑                 |
 | 无         | revert-buffer   | 把缓冲区恢复到上次文件存盘状态 |
 
+** GNU Emacs Reference Card
 
+#+ATTR_HTML: :width 100%
+[[./photo/GNU Emacs Reference Card.png]]
+
+#+ATTR_HTML: :width 100%
+[[./photo/GNU Emacs Reference Card-version22.png]]
 
