--- a/README.org
+++ b/README.org
@@ -240,6 +240,51 @@
 | C-c C-k  | show-branches                    | 显示当前标题的正文及所有下级标题的正文       |
 | C-c C-i  | show-children                    | 显示当前标题的下一级标题(不包括正文)                          |
 
+*** 单词简写模式命令
+
+| 键盘操作 | 命令名称                                    | 动作                                         |
+|----------+---------------------------------------------+----------------------------------------------|
+| 无       | abbrev-mode                                 | 进入(或退出)单词简写模式                     |
+| 无       | define-global-abbrev RET abbrev RET exp RET | 定义一个全局简写词(先输入简写词，后输入短语) |
+| 无       | write-abbrev-file                           | 保存简写词汇表文件                           |
+| 无       | edit-abbrevs                                | 编辑简写词汇表                               |
+| 无       | list-abbrevs                                | 查看简写词汇表                               |
+| 无       | kill-all-abbrevs                            | 本次编辑工作禁用单词简写模式                 |
+
+*** 查找字符串命令
+
+| 键盘操作 | 命令名称             | 动作                             |
+|----------+----------------------+----------------------------------|
+| C-s      | isearch-forward      | 向下递增查找                     |
+| C-r      | isearch-backward     | 向上递增查找                     |
+| C-g      | keyboard-quit        | 取消递增查找操作                 |
+| C-s C-w  | 无                   | 把光标位置处的单词用作查找字符串 |
+| C-s M-y  | 无                   | 把删除环中的文本用作查找字符串   |
+
+#+BEGIN_SRC javascript
+- 查找字符串时区分大小写(默认不区分大小写): 
+    `M-x set-variable RETURN case-fold-search RETURN nil`
+#+END_SRC
+
+*** 替换字符串命令
+
+| 键盘操作   | 命令名称             | 动作                                                 |
+|------------+----------------------+------------------------------------------------------|
+| M-%        | query-replace        | 开始 查询-替换 操作                                  |
+| C-M-%      | query-replace-regexp | 开始 正则查询-替换 操作                              |
+| SPACE 或 y |                      | 用新字符串替换查询字符串，并前进到下一个位置         |
+| DEL 或 n   |                      | 不替换；前进到下一个位置                             |
+| .          |                      | 在当前位置做替换后退出                               |
+| ,          |                      | 替换并显示替换情况(再次按 SPACE或y 移动到下一个位置) |
+| !          |                      | 对后面的内容全部替换，不再询问                       |
+| ^          |                      | 返回上一次替换的位置                                 |
+| q          |                      | 退出替换操作                                               |
+
+#+BEGIN_SRC javascript
+  - 替换时不改变大小写情况:
+    `M-x set-variable RETURN case-replace RETURN nil`
+#+END_SRC
+
 ** 对 Emacs 进行定制
 
 *** Tips
