--- a/README.org
+++ b/README.org
@@ -318,6 +318,51 @@
 | 无       | kill-some-buffers |                     | 以问答方式删除各个编辑缓冲区     |
 | C-x s    | save-some-buffers |                     | 以问答方式保存修改过的编辑缓冲区 |
 
+*** 编辑缓冲区操作命令
+
+| 键盘操作       | 动作                                         | 执行情况      |
+|----------------+----------------------------------------------+---------------|
+| C-x n 或 SPACE | 移动到下一个编辑缓冲区                       | 立即执行      |
+| C-p            | 移动到上一个编辑缓冲区                       | 立即执行      |
+| d 或 k         | 给编辑缓冲区加上待删除标记                   | 按"x"键时执行 |
+| s              | 给编辑缓冲区加上存盘标记                     | 按"x"键时执行 |
+| u              | 移除编辑缓冲区的操作标记                     | 立即执行      |
+| x              | 对所有带有操作标记的编辑缓冲区执行相应的操作 | 立即执行      |
+| DEL            | 移除上一个编辑缓冲区的操作标记               | 立即执行      |
+| %              | 转换编辑缓冲区的只读状态                     | 立即执行      |
+| f              | 显示当前编辑缓冲区的内容                     | 立即执行      |
+| q              | 退出                                         | 立即执行          |
+
+*** 书签命令
+
+| 键盘操作 | 解释说明           | 命令名称           | 动作         |
+|----------+--------------------+--------------------+--------------|
+| C-x r m  | Set Bookmark       | bookmark-set       | 设置一个书签 |
+| C-x r b  | Jump to Bookmark   | bookmark-jump      | 跳转到书签   |
+| 无       | Rename Bookmark    | bookmark-rename    | 重命名书签   |
+| 无       | Delete Bookmark    | bookmark-delete    | 删除书签     |
+| 无       | Save               | bookmark-save      | 保存书签     |
+| C-x r l  | Edit Bookmark List | bookmark-menu-list | 编辑缓冲区   |
+| 无       | Insert Content     | bookmark-insert    | 把书签文件中的文本插入到指定光标位置上 |
+| 无       | write              | bookmark-write     | 把书签保存到指定文件中  |
+
+*** 书签编辑命令
+
+| 命令 | 动作                                           |
+|------+------------------------------------------------|
+| d    | 给书签加上待删除标记                           |
+| r    | 书签重命名                                     |
+| s    | 保存清单里的全部书签                           |
+| f    | 显示当前书签                                   |
+| m    | 给书签加上待显示标记                           |
+| v    | 显示有待显示标记的书签；如果没有，显示当前书签 |
+| t    | 切换书签关联文件路径的显示/不显示              |
+| w    | 显示书签关联文件的路径              |
+| x    | 删除有待删除标记的书签                                    |
+| u    | 移除书签的待操作标记                           |
+| DEL  | 移除上一行书签的待操作标记                     |
+| q    | 退出                                           |
+
 ** 对 Emacs 进行定制
 
 *** Tips
